# SoierAI

./: Cargo.toml  README.md
src/: main.rs
src/commands/: addcommand.rs  ball.rs  ban.rs  eval.rs  mod.rs
src/myutils/: myutils.rs
