[package]
name = "SoierAI"
version = "0.1.0"
authors = ["s"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = "0.10.5"
rand = "0.8.3"
evalexpr = "6"